[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "gitlinksync"
dynamic = ["version"]
description = "A tool to extract GitHub user links from X posts and automate follow-back actions"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Mehmet T. AKALIN", email = "makalin@gmail.com"}
]
maintainers = [
    {name = "Mehmet T. AKALIN", email = "makalin@gmail.com"}
]
keywords = ["github", "twitter", "x", "scraping", "automation", "follow-back", "social-media"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.25.0",
    "beautifulsoup4>=4.9.0",
    "flask>=2.0.0",
    "apscheduler>=3.9.0",
    "cryptography>=3.4.0",
    "psutil>=5.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.10.0",
    "black>=21.0.0",
    "flake8>=3.8.0",
    "mypy>=0.800",
]

[project.urls]
Homepage = "https://github.com/makalin/GitLinkSync"
Documentation = "https://github.com/makalin/GitLinkSync#readme"
Repository = "https://github.com/makalin/GitLinkSync"
"Bug Tracker" = "https://github.com/makalin/GitLinkSync/issues"

[project.scripts]
gitlinksync = "src.cli:main_cli"
gitlinksync-dashboard = "src.dashboard:app"
gitlinksync-scheduler = "src.scheduler:schedule_jobs"

[tool.setuptools_scm]
write_to = "src/_version.py"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=term-missing"
